--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
+    "@tabler/icons-react": "^3.31.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -48,6 +49,7 @@
     "framer-motion": "^12.6.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.484.0",
+    "motion": "^12.6.5",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -57,7 +59,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
     "sonner": "^2.0.2",
-    "tailwind-merge": "^3.0.2",
+    "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.4",
     "vaul": "^1.1.2",
     "zod": "^3.24.2"
