--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
     "sonner": "^2.0.2",
+    "supabase": "^2.20.12",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.4",
     "vaul": "^1.1.2",
