feat: add Leaflet map component for draggable marker functionality

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.6.3",
     "input-otp": "^1.4.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.484.0",
     "motion": "^12.6.5",
     "next": "15.2.4",
@@ -56,6 +57,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
     "sonner": "^2.0.2",
